--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "express": "node ./src/server/server.js"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
@@ -41,6 +42,10 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "typescript": "~3.1.1",
+    "body-parser": "^1.15.2",
+    "cors": "^2.8.0",
+    "express": "^4.14.0",
+    "request": "^2.74.0"
   }
 }
