--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.5",
     "@angular/compiler": "^7.2.5",
     "@angular/core": "^7.2.5",
     "@angular/forms": "^7.2.5",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.5",
     "@angular/platform-browser-dynamic": "^7.2.5",
     "@angular/router": "^7.2.5",
     "core-js": "^2.6.5",
     "rxjs": "^6.4.0",
+    "twitter": "^1.7.1",
     "zone.js": "^0.8.29"
   },
   "scripts": {
