--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "body-parser": "^1.19.0",
     "codelyzer": "~4.5.0",
+    "cors": "^2.8.0",
+    "express": "^4.14.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -43,12 +46,9 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "request": "^2.74.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1",
-    "body-parser": "^1.15.2",
-    "cors": "^2.8.0",
-    "express": "^4.14.0",
-    "request": "^2.74.0"
+    "typescript": "~3.1.1"
   }
 }
